// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a section 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DesktopSectionPanel
    section={
      Section {
        "classId": "1210",
        "crn": "13502",
        "host": "neu.edu",
        "lastUpdateTime": 1511131914029,
        "meetings": Array [
          Meeting {
            "endDate": "2017-12-07T00:00:00.000Z",
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "startDate": "2017-09-07T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-06T11:30:00.000Z",
                  "start": "1970-01-06T09:50:00.000Z",
                },
              ],
            ],
            "where": "Snell Engineering Center 108",
          },
        ],
        "online": false,
        "seatsCapacity": 19,
        "seatsRemaining": 0,
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
        "waitCapacity": 0,
        "waitRemaining": 0,
      }
    }
    shouldShowExamColumns={false}
    showHonorsColumn={false}
    showWaitList={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "neu.edu/201810/CS/1210/13502",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <td>
          13502
        </td>,
        <td>
          Jennifer Anne Shire
        </td>,
        Array [
          <td>
            <WeekdayBoxes
              section={
                Section {
                  "classId": "1210",
                  "crn": "13502",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914029,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T11:30:00.000Z",
                            "start": "1970-01-06T09:50:00.000Z",
                          },
                        ],
                      ],
                      "where": "Snell Engineering Center 108",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />
          </td>,
          <td>
            9:50 - 11:30 am
          </td>,
          <td>
            <LocationLinks
              section={
                Section {
                  "classId": "1210",
                  "crn": "13502",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914029,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T11:30:00.000Z",
                            "start": "1970-01-06T09:50:00.000Z",
                          },
                        ],
                      ],
                      "where": "Snell Engineering Center 108",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />
          </td>,
        ],
        <td>
          <div
            className="inlineBlock"
            data-tip="Open Seats/Total Seats"
          >
            0
            /
            19
          </div>
        </td>,
        <td
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="inlineBlock"
            data-tip="Open/Total Waitlist Seats"
          >
            0
            /
            0
          </div>
        </td>,
        <td
          style={
            Object {
              "display": "none",
            }
          }
        >
          <Icon
            as="i"
            name="x"
          />
        </td>,
        <td>
          <a
            className="inlineBlock sectionGlobe"
            data-tip="View on neu.edu"
            href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="link"
              src="file"
            />
          </a>
        </td>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "13502",
        },
        "ref": null,
        "rendered": "13502",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Jennifer Anne Shire",
        },
        "ref": null,
        "rendered": "Jennifer Anne Shire",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": "weekDayBoxes",
        "nodeType": "host",
        "props": Object {
          "children": <WeekdayBoxes
            section={
              Section {
                "classId": "1210",
                "crn": "13502",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914029,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T11:30:00.000Z",
                          "start": "1970-01-06T09:50:00.000Z",
                        },
                      ],
                    ],
                    "where": "Snell Engineering Center 108",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "section": Section {
              "classId": "1210",
              "crn": "13502",
              "host": "neu.edu",
              "lastUpdateTime": 1511131914029,
              "meetings": Array [
                Meeting {
                  "endDate": "2017-12-07T00:00:00.000Z",
                  "profs": Array [
                    "Jennifer Anne Shire",
                  ],
                  "startDate": "2017-09-07T00:00:00.000Z",
                  "times": Array [
                    Array [
                      Object {
                        "end": "1970-01-06T11:30:00.000Z",
                        "start": "1970-01-06T09:50:00.000Z",
                      },
                    ],
                  ],
                  "where": "Snell Engineering Center 108",
                },
              ],
              "online": false,
              "seatsCapacity": 19,
              "seatsRemaining": 0,
              "subject": "CS",
              "termId": "201810",
              "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
              "waitCapacity": 0,
              "waitRemaining": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": "times",
        "nodeType": "host",
        "props": Object {
          "children": "9:50 - 11:30 am",
        },
        "ref": null,
        "rendered": "9:50 - 11:30 am",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": "locationLinks",
        "nodeType": "host",
        "props": Object {
          "children": <LocationLinks
            section={
              Section {
                "classId": "1210",
                "crn": "13502",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914029,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T11:30:00.000Z",
                          "start": "1970-01-06T09:50:00.000Z",
                        },
                      ],
                    ],
                    "where": "Snell Engineering Center 108",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "section": Section {
              "classId": "1210",
              "crn": "13502",
              "host": "neu.edu",
              "lastUpdateTime": 1511131914029,
              "meetings": Array [
                Meeting {
                  "endDate": "2017-12-07T00:00:00.000Z",
                  "profs": Array [
                    "Jennifer Anne Shire",
                  ],
                  "startDate": "2017-09-07T00:00:00.000Z",
                  "times": Array [
                    Array [
                      Object {
                        "end": "1970-01-06T11:30:00.000Z",
                        "start": "1970-01-06T09:50:00.000Z",
                      },
                    ],
                  ],
                  "where": "Snell Engineering Center 108",
                },
              ],
              "online": false,
              "seatsCapacity": 19,
              "seatsRemaining": 0,
              "subject": "CS",
              "termId": "201810",
              "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
              "waitCapacity": 0,
              "waitRemaining": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="inlineBlock"
            data-tip="Open Seats/Total Seats"
          >
            0
            /
            19
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              0,
              "/",
              19,
            ],
            "className": "inlineBlock",
            "data-tip": "Open Seats/Total Seats",
          },
          "ref": null,
          "rendered": Array [
            0,
            "/",
            19,
          ],
          "type": "div",
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="inlineBlock"
            data-tip="Open/Total Waitlist Seats"
          >
            0
            /
            0
          </div>,
          "style": Object {
            "display": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              0,
              "/",
              0,
            ],
            "className": "inlineBlock",
            "data-tip": "Open/Total Waitlist Seats",
          },
          "ref": null,
          "rendered": Array [
            0,
            "/",
            0,
          ],
          "type": "div",
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Icon
            as="i"
            name="x"
          />,
          "style": Object {
            "display": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "as": "i",
            "name": "x",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            className="inlineBlock sectionGlobe"
            data-tip="View on neu.edu"
            href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="link"
              src="file"
            />
          </a>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="link"
              src="file"
            />,
            "className": "inlineBlock sectionGlobe",
            "data-tip": "View on neu.edu",
            "href": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
            "rel": "noopener noreferrer",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "link",
              "src": "file",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "a",
        },
        "type": "td",
      },
    ],
    "type": "tr",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "neu.edu/201810/CS/1210/13502",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <td>
            13502
          </td>,
          <td>
            Jennifer Anne Shire
          </td>,
          Array [
            <td>
              <WeekdayBoxes
                section={
                  Section {
                    "classId": "1210",
                    "crn": "13502",
                    "host": "neu.edu",
                    "lastUpdateTime": 1511131914029,
                    "meetings": Array [
                      Meeting {
                        "endDate": "2017-12-07T00:00:00.000Z",
                        "profs": Array [
                          "Jennifer Anne Shire",
                        ],
                        "startDate": "2017-09-07T00:00:00.000Z",
                        "times": Array [
                          Array [
                            Object {
                              "end": "1970-01-06T11:30:00.000Z",
                              "start": "1970-01-06T09:50:00.000Z",
                            },
                          ],
                        ],
                        "where": "Snell Engineering Center 108",
                      },
                    ],
                    "online": false,
                    "seatsCapacity": 19,
                    "seatsRemaining": 0,
                    "subject": "CS",
                    "termId": "201810",
                    "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                    "waitCapacity": 0,
                    "waitRemaining": 0,
                  }
                }
              />
            </td>,
            <td>
              9:50 - 11:30 am
            </td>,
            <td>
              <LocationLinks
                section={
                  Section {
                    "classId": "1210",
                    "crn": "13502",
                    "host": "neu.edu",
                    "lastUpdateTime": 1511131914029,
                    "meetings": Array [
                      Meeting {
                        "endDate": "2017-12-07T00:00:00.000Z",
                        "profs": Array [
                          "Jennifer Anne Shire",
                        ],
                        "startDate": "2017-09-07T00:00:00.000Z",
                        "times": Array [
                          Array [
                            Object {
                              "end": "1970-01-06T11:30:00.000Z",
                              "start": "1970-01-06T09:50:00.000Z",
                            },
                          ],
                        ],
                        "where": "Snell Engineering Center 108",
                      },
                    ],
                    "online": false,
                    "seatsCapacity": 19,
                    "seatsRemaining": 0,
                    "subject": "CS",
                    "termId": "201810",
                    "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                    "waitCapacity": 0,
                    "waitRemaining": 0,
                  }
                }
              />
            </td>,
          ],
          <td>
            <div
              className="inlineBlock"
              data-tip="Open Seats/Total Seats"
            >
              0
              /
              19
            </div>
          </td>,
          <td
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              className="inlineBlock"
              data-tip="Open/Total Waitlist Seats"
            >
              0
              /
              0
            </div>
          </td>,
          <td
            style={
              Object {
                "display": "none",
              }
            }
          >
            <Icon
              as="i"
              name="x"
            />
          </td>,
          <td>
            <a
              className="inlineBlock sectionGlobe"
              data-tip="View on neu.edu"
              href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="link"
                src="file"
              />
            </a>
          </td>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "13502",
          },
          "ref": null,
          "rendered": "13502",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Jennifer Anne Shire",
          },
          "ref": null,
          "rendered": "Jennifer Anne Shire",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": "weekDayBoxes",
          "nodeType": "host",
          "props": Object {
            "children": <WeekdayBoxes
              section={
                Section {
                  "classId": "1210",
                  "crn": "13502",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914029,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T11:30:00.000Z",
                            "start": "1970-01-06T09:50:00.000Z",
                          },
                        ],
                      ],
                      "where": "Snell Engineering Center 108",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "section": Section {
                "classId": "1210",
                "crn": "13502",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914029,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T11:30:00.000Z",
                          "start": "1970-01-06T09:50:00.000Z",
                        },
                      ],
                    ],
                    "where": "Snell Engineering Center 108",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                "waitCapacity": 0,
                "waitRemaining": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": "times",
          "nodeType": "host",
          "props": Object {
            "children": "9:50 - 11:30 am",
          },
          "ref": null,
          "rendered": "9:50 - 11:30 am",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": "locationLinks",
          "nodeType": "host",
          "props": Object {
            "children": <LocationLinks
              section={
                Section {
                  "classId": "1210",
                  "crn": "13502",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914029,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T11:30:00.000Z",
                            "start": "1970-01-06T09:50:00.000Z",
                          },
                        ],
                      ],
                      "where": "Snell Engineering Center 108",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "section": Section {
                "classId": "1210",
                "crn": "13502",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914029,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T11:30:00.000Z",
                          "start": "1970-01-06T09:50:00.000Z",
                        },
                      ],
                    ],
                    "where": "Snell Engineering Center 108",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                "waitCapacity": 0,
                "waitRemaining": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="inlineBlock"
              data-tip="Open Seats/Total Seats"
            >
              0
              /
              19
            </div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                0,
                "/",
                19,
              ],
              "className": "inlineBlock",
              "data-tip": "Open Seats/Total Seats",
            },
            "ref": null,
            "rendered": Array [
              0,
              "/",
              19,
            ],
            "type": "div",
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="inlineBlock"
              data-tip="Open/Total Waitlist Seats"
            >
              0
              /
              0
            </div>,
            "style": Object {
              "display": "none",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                0,
                "/",
                0,
              ],
              "className": "inlineBlock",
              "data-tip": "Open/Total Waitlist Seats",
            },
            "ref": null,
            "rendered": Array [
              0,
              "/",
              0,
            ],
            "type": "div",
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Icon
              as="i"
              name="x"
            />,
            "style": Object {
              "display": "none",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "as": "i",
              "name": "x",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="inlineBlock sectionGlobe"
              data-tip="View on neu.edu"
              href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="link"
                src="file"
              />
            </a>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="link"
                src="file"
              />,
              "className": "inlineBlock sectionGlobe",
              "data-tip": "View on neu.edu",
              "href": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "link",
                "src": "file",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "a",
          },
          "type": "td",
        },
      ],
      "type": "tr",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render another section 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DesktopSectionPanel
    section={
      Section {
        "classId": "1210",
        "crn": "14404",
        "host": "neu.edu",
        "lastUpdateTime": 1511131914065,
        "meetings": Array [
          Meeting {
            "endDate": "2017-12-07T00:00:00.000Z",
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "startDate": "2017-09-07T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-06T13:25:00.000Z",
                  "start": "1970-01-06T11:45:00.000Z",
                },
              ],
            ],
            "where": "Ryder Hall 431",
          },
        ],
        "online": false,
        "seatsCapacity": 19,
        "seatsRemaining": 0,
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
        "waitCapacity": 0,
        "waitRemaining": 0,
      }
    }
    shouldShowExamColumns={false}
    showHonorsColumn={false}
    showWaitList={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "neu.edu/201810/CS/1210/14404",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <td>
          14404
        </td>,
        <td>
          Jennifer Anne Shire
        </td>,
        Array [
          <td>
            <WeekdayBoxes
              section={
                Section {
                  "classId": "1210",
                  "crn": "14404",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914065,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T13:25:00.000Z",
                            "start": "1970-01-06T11:45:00.000Z",
                          },
                        ],
                      ],
                      "where": "Ryder Hall 431",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />
          </td>,
          <td>
            11:45 - 1:25 pm
          </td>,
          <td>
            <LocationLinks
              section={
                Section {
                  "classId": "1210",
                  "crn": "14404",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914065,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T13:25:00.000Z",
                            "start": "1970-01-06T11:45:00.000Z",
                          },
                        ],
                      ],
                      "where": "Ryder Hall 431",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />
          </td>,
        ],
        <td>
          <div
            className="inlineBlock"
            data-tip="Open Seats/Total Seats"
          >
            0
            /
            19
          </div>
        </td>,
        <td
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="inlineBlock"
            data-tip="Open/Total Waitlist Seats"
          >
            0
            /
            0
          </div>
        </td>,
        <td
          style={
            Object {
              "display": "none",
            }
          }
        >
          <Icon
            as="i"
            name="x"
          />
        </td>,
        <td>
          <a
            className="inlineBlock sectionGlobe"
            data-tip="View on neu.edu"
            href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="link"
              src="file"
            />
          </a>
        </td>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "14404",
        },
        "ref": null,
        "rendered": "14404",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Jennifer Anne Shire",
        },
        "ref": null,
        "rendered": "Jennifer Anne Shire",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": "weekDayBoxes",
        "nodeType": "host",
        "props": Object {
          "children": <WeekdayBoxes
            section={
              Section {
                "classId": "1210",
                "crn": "14404",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914065,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T13:25:00.000Z",
                          "start": "1970-01-06T11:45:00.000Z",
                        },
                      ],
                    ],
                    "where": "Ryder Hall 431",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "section": Section {
              "classId": "1210",
              "crn": "14404",
              "host": "neu.edu",
              "lastUpdateTime": 1511131914065,
              "meetings": Array [
                Meeting {
                  "endDate": "2017-12-07T00:00:00.000Z",
                  "profs": Array [
                    "Jennifer Anne Shire",
                  ],
                  "startDate": "2017-09-07T00:00:00.000Z",
                  "times": Array [
                    Array [
                      Object {
                        "end": "1970-01-06T13:25:00.000Z",
                        "start": "1970-01-06T11:45:00.000Z",
                      },
                    ],
                  ],
                  "where": "Ryder Hall 431",
                },
              ],
              "online": false,
              "seatsCapacity": 19,
              "seatsRemaining": 0,
              "subject": "CS",
              "termId": "201810",
              "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
              "waitCapacity": 0,
              "waitRemaining": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": "times",
        "nodeType": "host",
        "props": Object {
          "children": "11:45 - 1:25 pm",
        },
        "ref": null,
        "rendered": "11:45 - 1:25 pm",
        "type": "td",
      },
      Object {
        "instance": null,
        "key": "locationLinks",
        "nodeType": "host",
        "props": Object {
          "children": <LocationLinks
            section={
              Section {
                "classId": "1210",
                "crn": "14404",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914065,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T13:25:00.000Z",
                          "start": "1970-01-06T11:45:00.000Z",
                        },
                      ],
                    ],
                    "where": "Ryder Hall 431",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "section": Section {
              "classId": "1210",
              "crn": "14404",
              "host": "neu.edu",
              "lastUpdateTime": 1511131914065,
              "meetings": Array [
                Meeting {
                  "endDate": "2017-12-07T00:00:00.000Z",
                  "profs": Array [
                    "Jennifer Anne Shire",
                  ],
                  "startDate": "2017-09-07T00:00:00.000Z",
                  "times": Array [
                    Array [
                      Object {
                        "end": "1970-01-06T13:25:00.000Z",
                        "start": "1970-01-06T11:45:00.000Z",
                      },
                    ],
                  ],
                  "where": "Ryder Hall 431",
                },
              ],
              "online": false,
              "seatsCapacity": 19,
              "seatsRemaining": 0,
              "subject": "CS",
              "termId": "201810",
              "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
              "waitCapacity": 0,
              "waitRemaining": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="inlineBlock"
            data-tip="Open Seats/Total Seats"
          >
            0
            /
            19
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              0,
              "/",
              19,
            ],
            "className": "inlineBlock",
            "data-tip": "Open Seats/Total Seats",
          },
          "ref": null,
          "rendered": Array [
            0,
            "/",
            19,
          ],
          "type": "div",
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="inlineBlock"
            data-tip="Open/Total Waitlist Seats"
          >
            0
            /
            0
          </div>,
          "style": Object {
            "display": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              0,
              "/",
              0,
            ],
            "className": "inlineBlock",
            "data-tip": "Open/Total Waitlist Seats",
          },
          "ref": null,
          "rendered": Array [
            0,
            "/",
            0,
          ],
          "type": "div",
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Icon
            as="i"
            name="x"
          />,
          "style": Object {
            "display": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "as": "i",
            "name": "x",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "td",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            className="inlineBlock sectionGlobe"
            data-tip="View on neu.edu"
            href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="link"
              src="file"
            />
          </a>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="link"
              src="file"
            />,
            "className": "inlineBlock sectionGlobe",
            "data-tip": "View on neu.edu",
            "href": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
            "rel": "noopener noreferrer",
            "target": "_blank",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "link",
              "src": "file",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "a",
        },
        "type": "td",
      },
    ],
    "type": "tr",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "neu.edu/201810/CS/1210/14404",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <td>
            14404
          </td>,
          <td>
            Jennifer Anne Shire
          </td>,
          Array [
            <td>
              <WeekdayBoxes
                section={
                  Section {
                    "classId": "1210",
                    "crn": "14404",
                    "host": "neu.edu",
                    "lastUpdateTime": 1511131914065,
                    "meetings": Array [
                      Meeting {
                        "endDate": "2017-12-07T00:00:00.000Z",
                        "profs": Array [
                          "Jennifer Anne Shire",
                        ],
                        "startDate": "2017-09-07T00:00:00.000Z",
                        "times": Array [
                          Array [
                            Object {
                              "end": "1970-01-06T13:25:00.000Z",
                              "start": "1970-01-06T11:45:00.000Z",
                            },
                          ],
                        ],
                        "where": "Ryder Hall 431",
                      },
                    ],
                    "online": false,
                    "seatsCapacity": 19,
                    "seatsRemaining": 0,
                    "subject": "CS",
                    "termId": "201810",
                    "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                    "waitCapacity": 0,
                    "waitRemaining": 0,
                  }
                }
              />
            </td>,
            <td>
              11:45 - 1:25 pm
            </td>,
            <td>
              <LocationLinks
                section={
                  Section {
                    "classId": "1210",
                    "crn": "14404",
                    "host": "neu.edu",
                    "lastUpdateTime": 1511131914065,
                    "meetings": Array [
                      Meeting {
                        "endDate": "2017-12-07T00:00:00.000Z",
                        "profs": Array [
                          "Jennifer Anne Shire",
                        ],
                        "startDate": "2017-09-07T00:00:00.000Z",
                        "times": Array [
                          Array [
                            Object {
                              "end": "1970-01-06T13:25:00.000Z",
                              "start": "1970-01-06T11:45:00.000Z",
                            },
                          ],
                        ],
                        "where": "Ryder Hall 431",
                      },
                    ],
                    "online": false,
                    "seatsCapacity": 19,
                    "seatsRemaining": 0,
                    "subject": "CS",
                    "termId": "201810",
                    "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                    "waitCapacity": 0,
                    "waitRemaining": 0,
                  }
                }
              />
            </td>,
          ],
          <td>
            <div
              className="inlineBlock"
              data-tip="Open Seats/Total Seats"
            >
              0
              /
              19
            </div>
          </td>,
          <td
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div
              className="inlineBlock"
              data-tip="Open/Total Waitlist Seats"
            >
              0
              /
              0
            </div>
          </td>,
          <td
            style={
              Object {
                "display": "none",
              }
            }
          >
            <Icon
              as="i"
              name="x"
            />
          </td>,
          <td>
            <a
              className="inlineBlock sectionGlobe"
              data-tip="View on neu.edu"
              href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="link"
                src="file"
              />
            </a>
          </td>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "14404",
          },
          "ref": null,
          "rendered": "14404",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Jennifer Anne Shire",
          },
          "ref": null,
          "rendered": "Jennifer Anne Shire",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": "weekDayBoxes",
          "nodeType": "host",
          "props": Object {
            "children": <WeekdayBoxes
              section={
                Section {
                  "classId": "1210",
                  "crn": "14404",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914065,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T13:25:00.000Z",
                            "start": "1970-01-06T11:45:00.000Z",
                          },
                        ],
                      ],
                      "where": "Ryder Hall 431",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "section": Section {
                "classId": "1210",
                "crn": "14404",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914065,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T13:25:00.000Z",
                          "start": "1970-01-06T11:45:00.000Z",
                        },
                      ],
                    ],
                    "where": "Ryder Hall 431",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                "waitCapacity": 0,
                "waitRemaining": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": "times",
          "nodeType": "host",
          "props": Object {
            "children": "11:45 - 1:25 pm",
          },
          "ref": null,
          "rendered": "11:45 - 1:25 pm",
          "type": "td",
        },
        Object {
          "instance": null,
          "key": "locationLinks",
          "nodeType": "host",
          "props": Object {
            "children": <LocationLinks
              section={
                Section {
                  "classId": "1210",
                  "crn": "14404",
                  "host": "neu.edu",
                  "lastUpdateTime": 1511131914065,
                  "meetings": Array [
                    Meeting {
                      "endDate": "2017-12-07T00:00:00.000Z",
                      "profs": Array [
                        "Jennifer Anne Shire",
                      ],
                      "startDate": "2017-09-07T00:00:00.000Z",
                      "times": Array [
                        Array [
                          Object {
                            "end": "1970-01-06T13:25:00.000Z",
                            "start": "1970-01-06T11:45:00.000Z",
                          },
                        ],
                      ],
                      "where": "Ryder Hall 431",
                    },
                  ],
                  "online": false,
                  "seatsCapacity": 19,
                  "seatsRemaining": 0,
                  "subject": "CS",
                  "termId": "201810",
                  "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                  "waitCapacity": 0,
                  "waitRemaining": 0,
                }
              }
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "section": Section {
                "classId": "1210",
                "crn": "14404",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914065,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "profs": Array [
                      "Jennifer Anne Shire",
                    ],
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T13:25:00.000Z",
                          "start": "1970-01-06T11:45:00.000Z",
                        },
                      ],
                    ],
                    "where": "Ryder Hall 431",
                  },
                ],
                "online": false,
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                "waitCapacity": 0,
                "waitRemaining": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="inlineBlock"
              data-tip="Open Seats/Total Seats"
            >
              0
              /
              19
            </div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                0,
                "/",
                19,
              ],
              "className": "inlineBlock",
              "data-tip": "Open Seats/Total Seats",
            },
            "ref": null,
            "rendered": Array [
              0,
              "/",
              19,
            ],
            "type": "div",
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="inlineBlock"
              data-tip="Open/Total Waitlist Seats"
            >
              0
              /
              0
            </div>,
            "style": Object {
              "display": "none",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                0,
                "/",
                0,
              ],
              "className": "inlineBlock",
              "data-tip": "Open/Total Waitlist Seats",
            },
            "ref": null,
            "rendered": Array [
              0,
              "/",
              0,
            ],
            "type": "div",
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Icon
              as="i"
              name="x"
            />,
            "style": Object {
              "display": "none",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "as": "i",
              "name": "x",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "td",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="inlineBlock sectionGlobe"
              data-tip="View on neu.edu"
              href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="link"
                src="file"
              />
            </a>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="link"
                src="file"
              />,
              "className": "inlineBlock sectionGlobe",
              "data-tip": "View on neu.edu",
              "href": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "link",
                "src": "file",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "a",
          },
          "type": "td",
        },
      ],
      "type": "tr",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
